# zk-leaderboard

./: README.md
circuit/: Nargo.toml  Prover.toml
circuit/src/: main.nr
contract/: Cargo.toml  package-lock.json  package.json  submit_score.js
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: test_leaderboard_rankings.1.json  test_leaderboard_submission.1.json  test_secure_submission.1.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
